# 24ondoc

./: .env.example  .env.staging.example  .gitignore  Makefile  docker-compose.staging.yml  docker-compose.yml  init.sql
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_ats_call_records.py  0003_add_pending_users.py  0004_add_chatwoot_contact_id.py  0005_remove_chatwoot_add_twenty.py  0006_add_source_to_call_records.py  0007_drop_task_mirrors.py  0008_add_task_events.py  0009_add_twenty_task_id_to_calls.py
backend/src/: config.py  main.py
backend/src/admin/application/: __init__.py  ports.py  use_cases.py
backend/src/admin/domain/: __init__.py  models.py
backend/src/admin/infrastructure/: __init__.py  auth.py  chatwoot_admin_client.py  env_settings.py  router.py  telegram_notify.py
backend/src/admin/templates/: admin.html
backend/src/admin/tests/: test_use_cases.py
backend/src/ai_classification/application/: use_cases.py
backend/src/ai_classification/domain/: events.py  models.py  repository.py
backend/src/ai_classification/infrastructure/: openrouter_adapter.py
backend/src/ai_classification/tests/: test_check_script.py  test_extract_location.py  test_openrouter_adapter.py  test_use_cases.py
backend/src/ats_processing/application/: ats2_poller.py  ats2_transcription_mapper.py  ports.py  sync_call_to_twenty.py  use_cases.py
backend/src/ats_processing/domain/: events.py  models.py  repository.py
backend/src/ats_processing/infrastructure/: ats2_client.py  minio_adapter.py  orm_models.py  repository.py  webhook_handler.py
backend/src/ats_processing/tests/: test_ats2_client.py  test_ats2_config_integration.py  test_ats2_poller.py  test_ats2_transcription_mapper.py  test_domain.py  test_process_call.py  test_repository.py  test_sync_call_to_twenty.py  test_use_cases.py  test_webhook.py
backend/src/chatwoot_integration/application/: use_cases.py
backend/src/chatwoot_integration/domain/: events.py  models.py  repository.py
backend/src/chatwoot_integration/infrastructure/: chatwoot_client.py  platform_client.py  ticket_repository.py  webhook_handler.py
backend/src/chatwoot_integration/tests/: test_chatwoot_client.py  test_platform_client.py  test_use_cases.py  test_webhook_extended.py
backend/src/reports/application/: compute_report.py  generate_report.py  queries.py
backend/src/reports/domain/: models.py
backend/src/reports/infrastructure/: http_handler.py  redis_cache.py  twenty_timeline_reader.py
backend/src/reports/tests/: test_compute_report.py  test_generate_report.py  test_redis_cache.py
backend/src/speech_to_text/application/: use_cases.py
backend/src/speech_to_text/domain/: events.py  models.py  repository.py
backend/src/speech_to_text/infrastructure/: whisper_adapter.py
backend/src/speech_to_text/tests/: test_use_cases.py  test_whisper_adapter.py
backend/src/task_events/application/: repeat_detection.py  write_event.py
backend/src/task_events/domain/: models.py  ports.py
backend/src/task_events/infrastructure/: orm_models.py  repository.py
backend/src/task_events/tests/: test_repeat_detection.py  test_write_event.py
backend/src/telegram_ingestion/application/: auth_use_case.py  ports.py  registration_use_cases.py  tasks_use_cases.py  use_cases.py
backend/src/telegram_ingestion/domain/: events.py  models.py  repository.py
backend/src/telegram_ingestion/infrastructure/: bot_handler.py  chatwoot_register_adapter.py  draft_session_repository.py  local_voice_storage.py  orm_models.py  pending_user_repository.py  reports_bot_handler.py  (+5 more)
(+45 files in other folders)
