[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "24ondoc-backend"
version = "0.1.0"
description = "Chatwoot CRM + Telegram Bot + АТС Т2 integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiogram>=3.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "pgvector>=0.3.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "tenacity>=8.3.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "telegram_ingestion.infrastructure.bot_handler",
    "ats_processing.application.use_cases",
    "ai_classification.infrastructure.openrouter_adapter",
]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]
pythonpath = ["src"]
addopts = "--cov=src/chatwoot_integration --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/chatwoot_integration"]
omit = ["*/tests/*", "*/__init__.py"]
